src/App.css
#root { height: 100% }
html,
body {
  position: relative;
  height: 100%;
  background: rgb(220, 220, 220);
  /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 14px;
  color: #000; */
  margin: 0;
  padding: 0;
}
  .App {
    text-align: center;
    overflow: scroll;
  }

  .App-logo {
    height: 10rem;
    pointer-events: none;
  }

  @media (prefers-reduced-motion: no-preference) {
    .App-logo {
      animation: App-logo-spin infinite 20s linear;
    }
  }

  .App-header {
    background-color: transparent;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: calc(10px + 2vmin);
    color: white;
  }

  .App-link {
    color: #61dafb;
  }

  @keyframes App-logo-spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }

  /* General Container Styling  */

  .containers {
    position: absolute;
    top: 140px;
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 5%;
    text-align: center;
  }

  .logo {
    height: 4rem;
    margin-left: -10rem;
    border-radius: 50px
  }
  /* General Component Styling  */

  .components {
    margin-top: 3%;
    margin-left: 5%;
    margin-right: 10%;
    width: 90%;
    min-width: 500px;
  }


  /* General Text Styling */

  .h1 {
    font-weight: 600;
    font-size: 120px;
    margin: 0px;
    font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
  }

  .h2 {
    font-size: 60px;
    margin: 0px;
    font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
  }

  .h2-standard {
    font-size: 25px;
    margin: 0px;
  }

  .h3 {
    font-size: 20px;
    margin: 0%;
  }

  .h4 {
    margin: 0%;
  }

  .h5 {
    margin: 0%;
  }

  .p {
    font-size: 25px;
    font-weight: 500;
    margin-top: 0px;
    font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
  }

  .p#intro {
    font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
    text-decoration: none;
    color: black;
  }

  .buttons {
    font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
    font-weight: bold;
    font-size: 20px;
    background: black;
    color: #ffde59;
    width: 100px;
    height: 50px;
    border: solid;
    border-color: black;
    border-radius: 5px;
    outline: none;
    text-align: center;
  }

  .buttons:hover {
    color: #71eeb8;
    cursor: pointer;
  }

  .about-buttons {
    position: absolute;
    width: auto;
    margin-top: 40px;
    left: 40%;
    outline: none;
  }

  .close-buttons {
    background: none;
    border: none;
    outline: none;
    font-size: 50px;
    position: absolute;
    color: white;
    right: 0;
    top: 8%;
    color: #71eeb8;
    z-index: 4;
  }

  .expand-buttons {
    width: 20%;
    height: 20%;
    min-width: 60px;
    color: black;
    background: none;
    border: none;
    outline: none;
    margin-top: 2%;
    font-size: 15px;
  }

  .expand-buttons:hover {
    color: black;
  }

  #get-in-touch {
    width: 200px;
  }

  .small-buttons {
    margin-left: 2%;
    margin-right: 2%;
  }

  /* Resume Styling */

  #resume-div {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
  }


  .resume-divs {
    margin: 2%;
    width: 40%;
    border: solid;
    border-radius: 10px;
    min-width: 400px;
    min-height: 150px;
    display: grid;

  }

  .resume-divs:hover {
    cursor: pointer;
    background: #ee71d1;
  }

  .resume-headings {
    height: 100%;
    margin-top: 10%;
    margin-bottom: 10%;
  }

  .resume-icons {
    width: 20%;
    margin-left: 41%;
    margin-bottom: 10%;
  }

  .resume-bullet-points-div {
    text-align: justify;
    margin: 5%;
  }

  .resume-bullet-points {
    margin: 0.5%;
    font-size: 20px;
  }

  .full-resume-divs {
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;
    justify-content: center;
  }

  .individual-resume-divs {
    margin-top: 5%;
    border: solid;
    border-radius: 10px;
    padding: 2%;
    padding-top: 5%;
    padding-bottom: 5%;
  }

  .individual-resume-divs:hover {
    background:  #ee71d1;
    cursor: pointer;
  }

  .individual-resume-divs-headers {
    margin-bottom: 2%;
  }

  .indented {
    text-decoration: none;
    color: grey;
  }

  .resume-bullet-points.indented {
    margin-left: 5%;
  }

  #skills-div {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
  }

  .skills-divs {
    margin-left: 2%;
    margin-right: 2%;
    margin-top: 2%;
    margin-bottom: 2%;
    width: 30%;
    border: solid;
    border-radius: 10px;
    padding: 20px;
    min-width: 350px;
    min-height: 150px;
  }

  #PDF-link {
    text-decoration: none;
    color: grey;
  }

  /* Animation Styling  */

  .one-second-animation {
    animation: fadeIn ease 1s;
    -webkit-animation: fadeIn ease 1s;
    -moz-animation: fadeIn ease 1s;
    -o-animation: fadeIn ease 1s;
    -ms-animation: fadeIn ease 1s;
  }

  .three-second-animation {
    animation: fadeIn ease 3s;
    -webkit-animation: fadeIn ease 3s;
    -moz-animation: fadeIn ease 3s;
    -o-animation: fadeIn ease 3s;
    -ms-animation: fadeIn ease 3s;
  }

  .five-second-animation {
    animation: fadeIn ease 5s;
    -webkit-animation: fadeIn ease 5s;
    -moz-animation: fadeIn ease 5s;
    -o-animation: fadeIn ease 5s;
    -ms-animation: fadeIn ease 5s;
  }

  .seven-second-animation {
    animation: fadeIn ease 7s;
    -webkit-animation: fadeIn ease 7s;
    -moz-animation: fadeIn ease 7s;
    -o-animation: fadeIn ease 7s;
    -ms-animation: fadeIn ease 7s;
  }

  .nine-second-animation {
    animation: fadeIn ease 9s;
    -webkit-animation: fadeIn ease 9s;
    -moz-animation: fadeIn ease 9s;
    -o-animation: fadeIn ease 9s;
    -ms-animation: fadeIn ease 9s;
  }

  .ten-second-animation {
    animation: fadeIn ease 10s;
    -webkit-animation: fadeIn ease 10s;
    -moz-animation: fadeIn ease 10s;
    -o-animation: fadeIn ease 10s;
    -ms-animation: fadeIn ease 10s;
  }


  /* Key Frames */

  @keyframes fadeIn {
    0% {opacity:0;}
    40%{opacity:0}
    100% {opacity:1;}
  }
    
  @-moz-keyframes fadeIn {
    0% {opacity:0;}
    40%{opacity:0}
    100% {opacity:1;}
  }

  @-webkit-keyframes fadeIn {
    0% {opacity:0;}
    40%{opacity:0}
    100% {opacity:1;}
  }

  @-o-keyframes fadeIn {
    0% {opacity:0;}
    40%{opacity:0}
    100% {opacity:1;}
  }

  @-ms-keyframes fadeIn {
    0% {opacity:0;}
    40%{opacity:0}
    100% {opacity:1;}
  }

  /* Contact Styling  */

  .contact-icons {
    width: 100%;
    max-width: 70px;
    min-width: 50px;
    margin-left: 30px;
    margin-right: 30px;
    border-radius: 7px;
    border: 5px solid rgb(220, 220, 220);
    background-color:rgb(220, 220, 220);
  }

  .contact-icons:hover {
    cursor: pointer;
  }

  #contact-div {
    display: flex;
    justify-content: center;
    padding-left: 100px;
    padding-right: 100px;
  }

  .about {
    margin-top: -6rem;
    margin-left: 3rem;
    float: right;
    width: auto;
    height: 350px;
    border-radius: 10%;
    border: 5px solid  #ee71d1;
  }

.social-links-div {
    z-index: 1;
    width: 50px;
    display: flex;
    flex-direction: column-reverse;
    min-height: 75vh;
    position: absolute;
  }

  .git_button {
    padding: 1rem;
    font-size: 2.5rem;
    position: center;
    border-radius: 7px;
    border: 1px solid transparent;
    background-color: rgb(220, 220, 220);
    margin-top: 14rem;
    margin-right: 3rem;
    z-index: 0;
    top: 50%;

}
.demo_button {
    padding: 1rem;
    font-size: 2.5rem;
    position: center;
    border-radius: 7px;
    border: 1px solid transparent;
    background-color: rgb(220, 220, 220);
    margin-top: 14rem;
    z-index: 0;
    top: 50%;
}

.contact-icons1 {
  width: 100%;
  max-width: 70px;
  min-width: 50px;
  border-radius: 7px;
}

.logoCube {
  position: absolute;
  right: 20rem;
  width: 300px;
  height: 300px;
  padding: 1;
  margin: -15rem;
  margin-top: -20rem;
}
  /* Mobile layout */

@media all and (max-width: 768px) {
  .components {
    margin-top: 3%;
    margin-left: 5%;
    margin-right: 5%;
    width: 80%;
    min-width: auto;
  }
  .p {
    width: auto
  }

  .h1 {
    font-weight: 600;
    font-size: 80px;
    width: auto;
    margin: 0px;
    font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
  }
  .h2 {
    font-size: 40px;
    margin: 0px;
    font-family: "Calibre","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
  }
  .about {
    margin-top: 68rem;
    margin-left: 0;
    position: absolute;
    float: none;
    width: auto;
    height: 350px;
    border-radius: 10%;
    border: 5px solid  black;
  }
  .git_button {
    font-size: 2rem;
    position: absolute;
    margin-top: 14rem;
    margin-left: -2rem;
    z-index: 0;
    top: 50%;
    border-radius: 7px;
    border: 1px solid rgb(220, 220, 220);
    background-color: rgb(220, 220, 220);

}
.demo_button {
    font-size: 2rem;
    position: absolute;
    margin-top: 14rem;
    margin-left: 4rem;
    z-index: 0;
    top: 50%;
    border-radius: 7px;
    border: 1px solid rgb(220, 220, 220);
    background-color: rgb(220, 220, 220);
}

.contact-icons1 {
  width: 100%;
  max-width: 55px;
  margin-right: 3px;
  margin-left: 30px;
  border-radius: 7px;
  background-color: rgb(220, 220, 220);
}

.logoCube {
  text-align: center;
  width: 50%;
  height: 50%;
  padding: 1;
  margin-top: 10rem;
  margin-right: -10rem;
}

}


/* Dark Mode */
body.dark {
  background-color: black;
  color: white;

}

.resume-bullet-points.dark {
  margin: 0.5%;
  font-size: 20px;
  color: white;
}

